# task-api-server

./: .dockerignore  .env.compose.base  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  tasks_db
app/: config.py  dependencies.py  schemas.py
app/controllers/: __init__.py  exception.py  mappers.py  task.py
app/persistence/: __init__.py  base_repository.py  exception.py  schema.py  schemas.py  task_repository.py
app/web/: __init__.py  app.py  config.py  main.py  urls.py
app/web/resources/: __init__.py  pagination.py
app/web/resources/status/: __init__.py  api.py  schema.py  urls.py
app/web/resources/tasks/: __init__.py  api.py  schemas.py  urls.py
tests/: __init__.py
tests/integration/web/: __init__.py  conftest.py  test_create_task.py  test_delete_task.py  test_get_task_by_id.py  test_query_tasks.py  test_status.py  test_update_task.py
tests/unit/: conftest.py  test_schemas.py
tests/unit/controllers/: __init__.py  conftest.py  test_mappers.py  test_task_controller.py
tests/unit/persistence/: __init__.py  conftest.py  test_schemas.py  test_task_repository.py
tests/unit/resources/: __init__.py  test_pagination.py
tests/unit/resources/tasks/: __init__.py  test_api.py
